--- a/WebContent/vezbaSecurity/assets/css/stilovi.css
+++ b/WebContent/vezbaSecurity/assets/css/stilovi.css
@@ -1,6 +1,7 @@
 .standardWidth{
 	width: 40%;
 	text-align: center;
+	
 }
 
 .menu-header{
@@ -27,7 +28,7 @@
 }
 
 a{
-	color: white;
+	color:black;
 	size: 15px;
 	
 }
